--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
-    "redux-saga": "^1.2.1",
+    "redux-saga": "1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
